# Neuro

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  EXAMPLES_REDESIGN_PLAN.md  LICENSE  README.md  SECURITY.md  VSA.md  VSA_4_3.xml  VSA_Rust_4_0.xml  issues.txt  osv-scanner.toml  split_checker.py  split_processor.py  split_tc.py  split_tc_tool.py  test_mod  test_mod2
.cargo/: config.toml
compiler/control-flow/: CONTEXT.md  Cargo.toml  README.md
compiler/control-flow/src/: lib.rs
compiler/hir-lowering/: CONTEXT.md  Cargo.toml
compiler/hir-lowering/src/: closures.rs  expressions.rs  items.rs  lib.rs  operator_traits.rs  statements.rs  tests.rs  types.rs
compiler/infrastructure/diagnostics/: CONTEXT.md  Cargo.toml
compiler/infrastructure/diagnostics/src/: diagnostic.rs  lib.rs  report.rs  severity.rs
compiler/infrastructure/incremental/: Cargo.toml
compiler/infrastructure/incremental/src/: lib.rs
compiler/infrastructure/neuro-hir/: CONTEXT.md  Cargo.toml
compiler/infrastructure/neuro-hir/src/: expressions.rs  items.rs  lib.rs  statements.rs  types.rs
compiler/infrastructure/project-config/: CONTEXT.md  Cargo.toml
compiler/infrastructure/project-config/src/: lib.rs
compiler/infrastructure/source-location/: CONTEXT.md  Cargo.toml
compiler/infrastructure/source-location/src/: lib.rs
compiler/lexical-analysis/: CONTEXT.md  Cargo.toml  README.md
compiler/lexical-analysis/src/: error.rs  errors.rs  lexer.rs  lib.rs  test_edge_cases.rs  tests.rs  tokenizer.rs  tokens.rs
compiler/lexical-analysis/tests/: comprehensive_edge_cases.rs  error_handling_tests.rs  lexer_tests.rs  tmlanguage_sync.rs  tokenizer_integration_tests.rs
compiler/llvm-backend/: CONTEXT.md  Cargo.toml  README.md
compiler/llvm-backend/benches/: codegen_bench.rs
compiler/llvm-backend/src/: binary_generation.rs  codegen.rs  debug_info.rs  errors.rs  function_builder.rs  intrinsics.rs  jit_executor.rs  lib.rs  module_builder.rs  optimization.rs  optimization_passes.rs  type_mapping.rs  types.rs
compiler/llvm-backend/src/codegen/: closures.rs  context.rs  dispatch.rs  drops.rs  expressions.rs  functions.rs  mod.rs  panic.rs  statements.rs  structs.rs  type_pass.rs
compiler/llvm-backend/src/softfloat/: builtins.ll  mod.rs  reference.c
compiler/llvm-backend/tests/: comprehensive_codegen_tests.rs
compiler/macro-expansion/: Cargo.toml
compiler/macro-expansion/src/: attribute_macros.rs  hygiene.rs  lib.rs  macro_expander.rs  procedural.rs  template_engine.rs
compiler/memory-management/: Cargo.toml
compiler/memory-management/src/: allocation_tracking.rs  arc_runtime.rs  leak_detection.rs  lib.rs  memory_pool.rs
compiler/mlir-backend/: CONTEXT.md  Cargo.toml
compiler/mlir-backend/src/: errors.rs  lib.rs  lower.rs  smoke.rs
compiler/module-system/: Cargo.toml
compiler/module-system/src/: dependency_graph.rs  error.rs  import_resolver.rs  lib.rs  module_registry.rs
compiler/module-system/tests/: dependency_graph_tests.rs  import_resolver_tests.rs  module_system_tests.rs
compiler/neurc/: CONTEXT.md  Cargo.toml  README.md
compiler/neurc/src/: cli.rs  driver.rs  lib.rs  main.rs  output.rs
compiler/neurc/src/commands/: analyze.rs  build.rs  check.rs  compile.rs  eval.rs  llvm.rs  mod.rs  parse.rs  run.rs  tokenize.rs  version.rs
compiler/neurc/tests/: architecture_tests.rs  arrays.rs  assignments.rs  basic_features.rs  bitwise_operators.rs  borrow_exclusivity.rs  builtin_methods.rs  char_type.rs  cli_contract.rs  cli_integration_tests.rs  closures.rs  comparison_chains.rs  compound_assignment.rs  const_generics.rs  constants.rs  control_flow.rs  copy_clone.rs  destructuring.rs  dispatch.rs  drop_destructors.rs  enums.rs  examples.rs  expression_returns.rs  float_suffixes.rs  functions.rs  generic_structs.rs  generics.rs  half_precision.rs  hir_lowering.rs  if_block_expressions.rs  immutable_borrows.rs  integer_methods.rs  integer_overflow.rs  integer_suffixes.rs  integration_tests.rs  labeled_breaks.rs  lifetimes.rs  lints.rs  loop_value.rs  methods.rs  (+21 more)
compiler/neurc/tests/common/: mod.rs
compiler/pattern-matching/: Cargo.toml
compiler/pattern-matching/src/: decision_tree.rs  exhaustiveness.rs  lib.rs  pattern_compiler.rs  reachability.rs
compiler/semantic-analysis/: CONTEXT.md  Cargo.toml  README.md
compiler/semantic-analysis/src/: analyzer.rs  errors.rs  lib.rs  scope.rs  symbol_table.rs  test_edge_cases.rs  type_checker.rs  types.rs  warnings.rs
compiler/semantic-analysis/src/type_checkers/: closures.rs  declarations.rs  expressions.rs  literals.rs  matches.rs  mod.rs  moves.rs  operator_traits.rs  resolution.rs  statements.rs
compiler/semantic-analysis/tests/: error_handling_tests.rs  integration_tests.rs  semantics_const_generics.rs  semantics_control_flow.rs  semantics_errors.rs  semantics_expression_returns.rs  semantics_functions.rs  semantics_integers.rs  semantics_lints.rs  semantics_strings.rs
compiler/syntax-parsing/: CONTEXT.md  Cargo.toml  README.md
compiler/syntax-parsing/src/: error.rs  errors.rs  evaluator.rs  lib.rs  lib_new.rs  parser.rs  precedence.rs  test_parser_edge_cases.rs
compiler/syntax-parsing/src/ast/: expressions.rs  items.rs  mod.rs  patterns.rs  statements.rs  types.rs
compiler/syntax-parsing/tests/: closure_tests.rs  comprehensive_syntax_tests.rs  dispatch_tests.rs  enum_tests.rs  error_tests.rs  evaluator_edge_cases.rs  expression_parsing_tests.rs  expression_tests.rs  function_tests.rs  generic_type_tests.rs  integration_tests.rs  lifetime_tests.rs  match_tests.rs  parser_tests.rs  statement_tests.rs  trait_tests.rs
compiler/tensor-operations/: Cargo.toml
compiler/tensor-operations/src/: broadcasting.rs  layout_optimization.rs  lib.rs  operations.rs  shape_inference.rs  tensor_types.rs  validation.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: binary_generation_tests.rs
neurpm/: Cargo.toml
neurpm/src/: cache.rs  commands.rs  config.rs  installer.rs  lib.rs  main.rs  package.rs  registry.rs  resolver.rs
(+324 files in other folders)
