[workspace]
resolver = "2"

members = [
    # Infrastructure Components (Shared across slices)
    "compiler/infrastructure/shared-types",
    "compiler/infrastructure/source-location",
    "compiler/infrastructure/diagnostics",
    "compiler/infrastructure/project-config",
    "compiler/infrastructure/ast-types",

    # Phase 1: Core Compiler Slices
    "compiler/lexical-analysis",
    "compiler/syntax-parsing",
    "compiler/semantic-analysis",
    "compiler/control-flow",
    "compiler/llvm-backend",

    # Compiler Driver
    "compiler/neurc",

    # Phase 2+: Feature Slices (Added incrementally)
    # "compiler/tensor-operations",
    # "compiler/automatic-differentiation",
    # "compiler/gpu-compilation",
    # "compiler/memory-management",
    # "compiler/module-system",
    # "compiler/pattern-matching",
    # "compiler/optimization-passes",
    # "compiler/error-reporting",

    # Runtime Libraries (Phase 3+)
    # "runtime/neuro-std",
    # "runtime/neuro-nn",
    # "runtime/neuro-gpu",

    # Development Tools (Phase 7+)
    # "tools/neuro-lsp",
    # "tools/neuro-fmt",

    # Package Manager (Phase 7+)
    # "neurpm",

    # Testing
    # "integration-tests",
    # "benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["NEURO Contributors"]
license = "GPL-3.0"
repository = "https://github.com/yourusername/neuro-lang"
homepage = "https://github.com/yourusername/neuro-lang"
keywords = ["compiler", "ai", "machine-learning", "tensor", "neural-networks"]
categories = ["development-tools", "science"]

[workspace.dependencies]
# Core dependencies used across multiple crates
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# Lexical Analysis
logos = "0.14"
unicode-segmentation = "1.11"
unicode-ident = "1.0"

# Parsing
lalrpop = "0.20"
lalrpop-util = "0.20"
chumsky = "0.9"

# LLVM Backend
# Note: LLVM 18.1.8 is installed at C:\LLVM-1818
# Using inkwell 0.6.0 with llvm18-1 feature for stable LLVM 18.1.8 support
# Including all targets to avoid linking errors
inkwell = { version = "0.6.0", features = ["llvm18-1", "target-all"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"
env_logger = "0.11"
log = "0.4"

# Concurrency
rayon = "1.8"
crossbeam = "0.8"

# Utilities
itertools = "0.12"
once_cell = "1.19"
parking_lot = "0.12"

# LSP (Phase 7+)
tower-lsp = "0.20"
lsp-types = "0.95"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1
debug = true
incremental = true

[profile.bench]
opt-level = 3
debug = false
lto = true

# Custom profile for faster development builds
[profile.dev-optimized]
inherits = "dev"
opt-level = 1

# Profile for release builds with debug info
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
