[package]
name = "lexical-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
source-location = { path = "../infrastructure/source-location" }
diagnostics = { path = "../infrastructure/diagnostics" }
logos = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-ident = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
