[package]
name = "llvm-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
ast-types = { path = "../infrastructure/ast-types" }
diagnostics = { path = "../infrastructure/diagnostics" }
inkwell = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
syntax-parsing = { path = "../syntax-parsing" }
criterion = { workspace = true }

[lib]
path = "src/lib.rs"

[[bench]]
name = "codegen_bench"
harness = false
