[package]
name = "macro-expansion"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Workspace dependencies
shared-types = { path = "../infrastructure/shared-types" }
diagnostics = { path = "../infrastructure/diagnostics" }
source-location = { path = "../infrastructure/source-location" }

# External dependencies  
thiserror.workspace = true
serde = { workspace = true }
serde_json = "1.0"
smallvec = "1.13"

# For macro parsing and expansion
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing"] }

# For template engine
handlebars = "6.0"
indexmap = "2.0"

[dev-dependencies]
proptest.workspace = true