[package]
name = "memory-management"
version = "0.1.0"
edition = "2021"
description = "Memory management system for NEURO - ARC and memory pools"

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
diagnostics = { path = "../infrastructure/diagnostics" }
source-location = { path = "../infrastructure/source-location" }
parking_lot = "0.12"
crossbeam = "0.8"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"