[package]
name = "module-system"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
source-location = { path = "../infrastructure/source-location" }
diagnostics = { path = "../infrastructure/diagnostics" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"