[package]
name = "neurc"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
# Infrastructure
shared-types = { path = "../infrastructure/shared-types" }
diagnostics = { path = "../infrastructure/diagnostics" }
source-location = { path = "../infrastructure/source-location" }

# Core compiler components
lexical-analysis = { path = "../lexical-analysis" }
syntax-parsing = { path = "../syntax-parsing" }
module-system = { path = "../module-system" }
semantic-analysis = { path = "../semantic-analysis" }
llvm-backend = { path = "../llvm-backend" }

# External dependencies
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = "1.0"
tempfile = "3.0"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.0"
