[package]
name = "semantic-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
diagnostics = { path = "../infrastructure/diagnostics" }
source-location = { path = "../infrastructure/source-location" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
