[package]
name = "semantic-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
source-location = { path = "../infrastructure/source-location" }
diagnostics = { path = "../infrastructure/diagnostics" }
thiserror = { workspace = true }
anyhow = { workspace = true }

[lib]
path = "src/lib.rs"
