[package]
name = "semantic-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
ast-types = { path = "../infrastructure/ast-types" }
source-location = { path = "../infrastructure/source-location" }
diagnostics = { path = "../infrastructure/diagnostics" }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
syntax-parsing = { path = "../syntax-parsing" }

[lib]
path = "src/lib.rs"
