[package]
name = "syntax-parsing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
ast-types = { path = "../infrastructure/ast-types" }
source-location = { path = "../infrastructure/source-location" }
diagnostics = { path = "../infrastructure/diagnostics" }
lexical-analysis = { path = "../lexical-analysis" }
lalrpop-util = { workspace = true }
chumsky = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }

[lib]
path = "src/lib.rs"
