[package]
name = "syntax-parsing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
ast-types = { path = "../infrastructure/ast-types" }
source-location = { path = "../infrastructure/source-location" }
diagnostics = { path = "../infrastructure/diagnostics" }
lexical-analysis = { path = "../lexical-analysis" }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
