[package]
name = "tensor-operations"
version = "0.1.0"
edition = "2021"
description = "Tensor type system and operations for NEURO"

[dependencies]
shared-types = { path = "../infrastructure/shared-types" }
diagnostics = { path = "../infrastructure/diagnostics" }
source-location = { path = "../infrastructure/source-location" }
thiserror = "1.0"
smallvec = "1.0"

[dev-dependencies]
criterion = "0.5"