[package]
name = "diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
source-location = { path = "../source-location" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true