[package]
name = "incremental"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Incremental compilation support for NEURO"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shared-types = { path = "../shared-types" }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"