[package]
name = "source-location"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
shared-types = { path = "../shared-types" }
serde = { workspace = true }

[lib]
path = "src/lib.rs"
